Temp fix - mouseover only for dropdown; unavailable on mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6564,3 +6564,19 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+
+.dropdown:hover .dropdown-menu {
+        display: block;
+            margin-top: 0; /* remove the gap so it doesn't close*/
+             
+}
+.navbar-default .navbar-nav .open .dropdown-menu>li>a,.navbar-default .navbar-nav .open .dropdown-menu .nav .dropdown {
+    /*background-color: #3344ff;*/
+    background-color: #ff0000 !important; /*changes bottom dropdown but not others?*/
+    color:#ffffff !important;
+}
+
+.nav-pills .dropdown .dropdown-toggle {
+    background-color: #ff0000 !important; /*changes bottom dropdown but not others?*/
+    color:#ffffff !important;
+}
